--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-font": "^11.10.3",
     "react": "18.2.0",
     "react-native": "0.73.5",
+    "react-native-communications": "^2.2.1",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
